@@ -1,6 +1,2 @@
-/* This file defines the real functions for the inlines in rwlock.h.  */
-
-#include <cthreads.h>
-
-#define _RWLOCK_DEFINE_FUNCTIONS /* Define the real functions.  */
-#include <rwlock.h>
+#define RWLOCK_EI
+#include "rwlock.h"
