@@ -1,3 +1,12 @@
+Mon Oct 21 22:05:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* i386/csw.S (CALL_MCOUNT): New macro.
+	(cproc_swtich, cproc_start_wait, cproc_prepare): Use CALL_MCOUNT.
+
+	* rwlock.h: Change extern inline protection to use new canonical
+	method.
+	* rwlock.c: Rewritten.
+
 Wed Sep  4 09:06:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* Makefile (VPATH): Look in $(asm_syntax) instead of old
